--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Important pour les opérations git
+          fetch-depth: 0  
           repository: Elfi-11/Exo_Projet_CI
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -39,7 +39,7 @@ jobs:
       # 5. Lancer les tests
       - name: Run tests
         id: run-tests
-        continue-on-error: true  # Permet de continuer même en cas d'échec
+        continue-on-error: true  
         run: |
           python -m unittest discover -s test -p "*.py"
 
